syntax = "proto3";

package item;

import "google/protobuf/timestamp.proto";
import "common.proto";

// ---------- Main Entity ----------

message Item {
  string _id = 1;
  string reference = 2;
  string categorie = 3;
  string designation = 4;
  double seuilMinimum = 5;
  string codeBarre = 6;
  common.NestedCatalog catalogue = 7;
  repeated string accompagnement = 8;
  repeated common.NestedTarification tarification = 9;
  bool cuisson = 10;
  bool gererStockProduit = 11;
  bool visibleCaisse = 12;
  repeated common.NestedFabrication fabrication = 13;
  bool articleGeneric = 14;
  common.NestedUnite uniteDetails = 15;
  google.protobuf.Timestamp createdAt = 16;
  google.protobuf.Timestamp updatedAt = 17;
}

// ---------- Requests/Responses ----------

message ItemResponse {
  Item item = 1;
}

message GetItemByIdRequest {
  string _id = 1;
}

message ListItemsResponse {
  repeated Item items = 1;
}

// ---------- Service ----------

service ItemService {
  rpc GetItemById(GetItemByIdRequest) returns (ItemResponse);
  rpc GetAllItems(google.protobuf.Empty) returns (ListItemsResponse);
}
